Table utilisateurs {
  id_utilisateur integer [primary key, increment]
  prenom varchar
  nom varchar
  email varchar [unique]
  mot_de_passe varchar
  role varchar
  telephone varchar
  date_creation timestamp
}

Table etudiants {
  id_etudiant integer [primary key, increment]
  utilisateur_id integer [not null, unique]
  numero_etudiant varchar [unique]
  promotion varchar
  niveau integer
  groupe varchar
  date_naissance date
  adresse text
  contact_urgence varchar
}

Table enseignants {
  id_enseignant integer [primary key, increment]
  utilisateur_id integer [not null, unique]
  specialisation varchar
  date_embauche date
}

Table administrateurs {
  id_admin integer [primary key, increment]
  utilisateur_id integer [not null, unique]
}

Table cours {
  id_cours integer [primary key, increment]
  titre varchar
  code varchar
  description text
  credits integer
  semestre integer
  niveau integer
  capacite_max integer
  enseignant_id integer [not null]
}

Table inscriptions {
  id_inscription integer [primary key, increment]
  etudiant_id integer [not null]
  cours_id integer [not null]
  date_inscription date
  statut varchar

  indexes { // un étudiant ne peut apparaître qu'une seule fois dans le même cours
    (etudiant_id, cours_id) [unique]
  }
}

Table notes {
  id_note integer [primary key, increment]
  etudiant_id integer [not null]
  cours_id integer [not null]
  type_evaluation varchar
  note float
  coefficient integer
  date_creation timestamp
  validee boolean
}

Table seances {
  id_seance integer [primary key, increment]
  cours_id integer [not null]
  date_seance date
  heure_debut time
  heure_fin time
  salle varchar
  type_seance varchar
  groupe varchar
}

Table absences {
  id_absence integer [primary key, increment]
  etudiant_id integer [not null]
  seance_id integer [not null]
  statut varchar
  justifiee boolean
  commentaire text
}

Table notifications {
  id_notification integer [primary key, increment]
  utilisateur_id integer [not null]
  titre varchar
  message text
  est_lue boolean
  date_creation timestamp
}

Table messages {
  id_message integer [primary key, increment]
  expediteur_id integer [not null]
  destinataire_id integer [not null]
  sujet varchar
  contenu text
  lu boolean
  date_envoi timestamp
}

Table news {
  id_news integer [primary key, increment]
  auteur_id integer [not null]
  titre varchar
  contenu text
  categorie varchar
  date_publication timestamp
}

// Relations
Ref: etudiants.utilisateur_id > utilisateurs.id_utilisateur
Ref: enseignants.utilisateur_id > utilisateurs.id_utilisateur
Ref: administrateurs.utilisateur_id > utilisateurs.id_utilisateur

Ref: cours.enseignant_id > enseignants.id_enseignant

Ref: inscriptions.etudiant_id > etudiants.id_etudiant
Ref: inscriptions.cours_id > cours.id_cours

Ref: notes.etudiant_id > etudiants.id_etudiant
Ref: notes.cours_id > cours.id_cours

Ref: seances.cours_id > cours.id_cours

Ref: absences.etudiant_id > etudiants.id_etudiant
Ref: absences.seance_id > seances.id_seance

Ref: notifications.utilisateur_id > utilisateurs.id_utilisateur

Ref: messages.expediteur_id > utilisateurs.id_utilisateur
Ref: messages.destinataire_id > utilisateurs.id_utilisateur

Ref: news.auteur_id > utilisateurs.id_utilisateur